refactor: keyword, image DTO에 담아서 반환